--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,10 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@android:id/tabhost"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent" >
-	<ListView
-		android:id="@+id/birthdayList"  
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content" />
-</LinearLayout>
+	android:layout_height="fill_parent">
+	<LinearLayout
+		android:orientation="vertical"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent" >
+		<TabWidget
+			android:id="@android:id/tabs"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content" />
+		<FrameLayout
+			android:id="@android:id/tabcontent"
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent" >
+			<LinearLayout
+				android:orientation="vertical"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:id="@+id/tab1" >
+				<ListView
+					android:id="@+id/birthdayList"  
+					android:layout_width="fill_parent" 
+					android:layout_height="wrap_content" />
+			</LinearLayout>
+			<LinearLayout
+				android:orientation="vertical"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:id="@+id/tab2" >
+				<ListView
+					android:id="@+id/noBirthdayList"  
+					android:layout_width="fill_parent" 
+					android:layout_height="wrap_content" />
+			</LinearLayout>
+		</FrameLayout>
+	</LinearLayout>
+</TabHost>
